=== 0.5.35

* Added Direct Connect Contact and Transaction proxy models.

=== 0.5.34
* added rank to AccountLevel
* Renamed on hold count to declined count for Account Manager metrics.

=== 0.5.33

* Added create method for V2::FrontTemplate.
* Added new company_id and custom_image attributes to V2::FrontTemplate.

=== 0.5.32

* added use_closed_invoices to ScottySetting

=== 0.5.31

* added status and generated_at to MemberInsightMetrics

=== 0.5.30

* Added member_services_totals call the the V2::AccountManagerMetrics class.
* Added activity_by_account_manager call to the V2::AccountManagerMetrics class.
* Added company_status_counts call to the V2::AccountManagerMetrics class.

=== 0.5.29

* Added Enterprise review list method to V2::Review
* Added count attributes to enterprise.

=== 0.5.28
* added description, abbreviated_name, latitude, longitude fields to enterprise
* Fixed mispelling of calendared attributes.
* Added update and delete methods to V2::AccountManagerTodo.

=== 0.5.27

* Fixed V2 require statement for category_default_offer_template.

=== 0.5.26 2015-05-06

* Updated V2 require statements to include all V2 classes.

=== 0.5.25 2015-04-30

* Added V2::AccountManagerTodo todo_list create method
* Added MemberCall create method for V1.
* Added filtered_list method to Company proxy model.
* Added AccountManagerMetrics proxy model.
* Added MonthlyRecurringRevenues proxy model.
* added V2::AccountManagerTodo todo_list method
* added V2::AccountManager member_call_summary method
* Renamed call_counts_by_attempt to call_counts_by_priority.
* Added priority to MemberCall proxy model.

=== 0.5.24 2015-03-19

* Add V2::Company debit method
* Add GenericStatus model
* Added the search method to V2::CommunicationCampaign.
* Added send_postcard_preview attribute to communication_campaign.

=== 0.5.23 2015-02-18

* Add account_level_transition parameter to company_subscription.create
* Updated parameter lists when changing a company account level.